--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,4 @@ ENV = 'development'
 
 # base api
 VUE_APP_BASE_API = 'https://localhost:5001/api/'
+VUE_APP_IMG_BASE_API = 'https://images.doublezh.com/'
