--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:ci": "npm run lint && npm run test:unit"
   },
   "dependencies": {
+    "@microsoft/signalr": "^6.0.5",
     "@toast-ui/editor": "^2.2.0",
     "axios": "0.18.1",
     "clipboard": "2.0.4",
